# facultyai-dash-bootstrap-components

./: LICENSE  NOTICE.txt  README.md  justfile  package.json  pyproject.toml
.github/workflows/: release.yml  test-build.yml  tests.yml
dash_bootstrap_components/: __init__.py  _version.py
docs/: requirements.txt
docs/components_page/components/: tabs.md
docs/components_page/components/__tests__/: test_modal.py  test_snippets.py
docs/components_page/components/card/: image_overlay.py
docs/components_page/components/tabs/: labels_with_icons.py
docs/components_page/components/tooltip/: tooltip.py
docs/content/: changelog.md
docs/demos/theme_explorer/: tooltip.py
docs/examples/: __init__.py
docs/static/: docs.css
docs/templates/partials/: head.html
examples/templates/multi-page-apps/responsive-collapsible-sidebar/: sidebar.py
examples/templates/multi-page-apps/responsive-sidebar/: sidebar.py
src/private/: util.js
tests/: test_version.py
