[project]
name = "dash-bootstrap-components"
version = "2.0.5rc4"
description = "Bootstrap themed components for use in Plotly Dash"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tom Begley" }, { name = "Pascal Bugnion" }]
maintainers = [{ name = "Tom Begley", email = "tomcbegley@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "dash>=3.0.4",
]
classifiers = [
    "Framework :: Dash",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "dash[dev,testing]>=2.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
    "semver>=3.0.2",
]

[project.urls]
Homepage = "https://www.dash-bootstrap-components.com/"
Source = "https://github.com/dbc-team/dash-bootstrap-components/"
"Bug Reports" = "https://github.com/dbc-team/dash-bootstrap-components/issues"

[project.optional-dependencies]
pandas = ["numpy>=2.0.2", "pandas>=2.2.3"]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
source-include = ["NOTICE.txt"]

[tool.pytest.ini_options]
minversion = "6.0"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]

[tool.ruff.lint.per-file-ignores]
"docs/components_page/components/**.py" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = [
    "components_page",
    "demos",
    "examples",
    "markdown_to_html",
    "server",
]
known-third-party = [
    "dash",
    "dash_bootstrap_components",
    "dash_core_components",
    "dash_html_components",
    "flask",
    "invoke",
    "jinja2",
    "markdown",
    "pandas",
    "plotly",
    "semver",
    "setuptools",
    "sklearn",
    "termcolor",
    "werkzeug",
    "wordcloud",
]
